--- a/hacks/colors/tutorial.html
+++ b/hacks/colors/tutorial.html
@@ -30,7 +30,7 @@
     <li>line 70: the robot color when dead</li>
   </ol>
   <p>
-    You can set those variables to anything accepted as a valid canvas <code>fillStyle</code>&emdash;that's what the game
+    You can set those variables to anything accepted as a valid canvas <code>fillStyle</code>—that's what the game
     is doing under the hood.
     <a target="_blank" href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/Canvas_tutorial/Applying_styles_and_colors">This
     MDN article</a> talks about <code>fillStyle</code> and the different ways to set it.
