Starting graphics tutorial

--- a/hacks/graphics/tutorial.html
+++ b/hacks/graphics/tutorial.html
@@ -1,4 +1,27 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
+<link href="//thimble.webmaker.org/learning_projects/tutorial/tutorial.css" rel="stylesheet">
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="//thimble.webmaker.org/learning_projects/tutorial/tutorial.js"></script>
+<script>
+  jQuery(document).ready(function($){
+    $('body').tutorial();
+  });
+</script>
+<style>
+  ol {
+    padding-left: 1.5em;
+  }
+  code {
+    color: #C41A16;
+  }
+</style>
 
-Tutorial.
+<section>
+  <h1>Changing graphics</h1>
+  <p>
+    Here's a modified version of the game that draws graphics to the screen
+    instead of colored squares. Let's walk through the code, and then see
+    how to add in graphics of your own!
+  </p>
+</section>
