--- a/hacks/graphics/index.html
+++ b/hacks/graphics/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<script src="coquette.js"></script>
-<script src="roborampage.js"></script>
+<script src="../../coquette.js"></script>
+<script src="../../roborampage.js"></script>
 <link href='https://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
-<link href="style.css" rel="stylesheet" type="text/css">
+<link href="../../style.css" rel="stylesheet" type="text/css">
+<style>
+  .assets img {
+    background-color: rgba(255, 0, 255, 0.5);
+  }
+</style>
 
 <h1>ROBORAMPAGE</h1>
 <div class="container">
@@ -29,16 +34,50 @@
   <h2>Hack</h2>
   <p>Hack the game <a href="https://thimble.webmaker.org/project/59304/remix">in Thimble</a> or follow one of these tutorials:</p>
   <ul>
-    <li><a href="#">Choose your colors</a> <small>Coming soon</small></li>
+    <li><a href="https://thimble.webmaker.org/en-US/project/59570/remix">Choose your colors</a></li>
     <li><a href="#">Add your own graphics</a> <small>Coming soon</small></li>
     <li><a href="#">Create player abilities</a> <small>Coming soon</small></li>
     <li><a href="#">Change the robot AI</a> <small>Coming soon</small></li>
   </ul>
 </section>
+<section class="assets">
+  <h2>Assets</h2>
+  <p>
+    The graphics for this example were found or adapted from artwork at <a href="http://opengameart.org/">OpenGameArt.Org</a>,
+    specifically <a href="http://opengameart.org/content/block-ninja-2d-sprites">this</a> and
+    <a href="http://opengameart.org/content/little-angry-robot-drone">this</a> resource.
+  </p>
+  <img id="player-alive" src="ninja.png">
+  <img id="player-dead" src="dead.png">
+  <img id="robot-alive" src="bot-g.gif">
+  <img id="robot-dead" src="bot-r.gif">
+</section>
 
 <small class="attribution">By <a href="https://twitter.com/stenington">@stenington</a></small>
 
 <script>
+var showHitArea = false;
+
+Base.prototype.draw = function(ctx) {
+  var image = (this.dead || this.wreck) ? this.images['dead'] : this.images['alive'];
+  var imageSize = {
+    x: this.size.x + this.padding.x,
+    y: this.size.y + this.padding.y
+  };
+  ctx.drawImage(image, 
+    this.center.x - imageSize.x / 2,
+    this.center.y - imageSize.y / 2,
+    imageSize.x,
+    imageSize.y);
+  if (showHitArea) {
+    ctx.fillStyle = "rgba(255, 0, 255, 0.5)";
+    ctx.fillRect(this.center.x - this.size.x / 2,
+      this.center.y - this.size.y / 2,
+      this.size.x,
+      this.size.y);
+  }
+};
+
 function showMessage(msg) {
   var el = document.getElementById('message');
   el.style.display = "initial";
@@ -49,20 +88,28 @@ window.addEventListener('load', function() {
   new Game({
     width: 500,
     height: 500,
-    background: "#002b36",
-    enemies: 10,
+    background: "steelblue",
+    enemies: 5,
     player: {
       center: { x: 250, y: 250 },
-      size: { x: 9, y: 9 },
+      size: { x: 32, y: 32 },
       speed: { walk: 2.4, run: 3.6 },
-      colors: { alive: "#2aa198", dead: "#2aa198" }
+      images: {
+        alive: document.getElementById('player-alive'),
+        dead: document.getElementById('player-dead')
+      },
+      padding: { x: 12, y: 12 }
     },
     robot: {
-      size: { x: 9, y: 9 },
+      size: { x: 32, y: 30 },
       speed: { walk: 2.6 },
       attackStrategy: 'compass',
       waitStrategy: 'roam',
-      colors: { alive: "#d33682", dead:  "#dc322f" },
+      images: {
+        alive: document.getElementById('robot-alive'),
+        dead: document.getElementById('robot-dead')
+      },
+      padding: { x: 10, y: 10 }
     },
     win: function () {
       showMessage("You win!");
