Add graphics hack link

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <p>Hack the game <a href="https://thimble.webmaker.org/project/59304/remix">in Thimble</a> or follow one of these tutorials:</p>
   <ul>
     <li><a href="https://thimble.webmaker.org/en-US/project/59570/remix">Choose your colors</a></li>
-    <li><a href="#">Add your own graphics</a> <small>In progress</small></li>
+    <li><a href="https://thimble.webmaker.org/en-US/project/59702/remix">Add your own graphics</a> <small>In progress</small></li>
     <li><a href="#">Create player abilities</a> <small>Coming soon</small></li>
     <li><a href="#">Change the robot AI</a> <small>Coming soon</small></li>
   </ul>
