--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </div>
 <p>The robots are after you! Get them to crash before they get you.</p>
 <section class="play">
-  <h2>Play</h2>
+  <h2>Play It</h2>
   <dl>
     <dt>▲</dt>
     <dt>◀</dt>
@@ -26,7 +26,7 @@
   </dl>
 </section>
 <section class="hack">
-  <h2>Hack</h2>
+  <h2>Hack It</h2>
   <p>Hack the game <a href="https://thimble.webmaker.org/project/59304/remix">in Thimble</a> or follow one of these tutorials:</p>
   <ul>
     <li><a href="https://thimble.webmaker.org/en-US/project/59570/remix">Choose your colors</a></li>
