--- a/hacks/graphics/tutorial.html
+++ b/hacks/graphics/tutorial.html
@@ -49,7 +49,7 @@
     not pixel-perfect comparison of the images themselves.
   </p>
   <p>
-    You might have noticed in the Assets area on line 43 that the images there have pink backgrounds.
+    You might have noticed in the Assets area at the bottom of the page that the images there have pink backgrounds.
     That's showing you the true size of the images you're using, which can differ from the visual size
     if the image has a transparent background. We can show that pink square in the game as well.
     On line 59 there's a variable named <code>showHitArea</code> set to <code>false</code>. Change that
@@ -77,5 +77,30 @@
     the combination of <code>size</code> and <code>padding</code>, you should be able to make the collision detection
     a little more forgiving, and the game a little more fun to play!
   </p>
-
+  <h2>The draw method</h2>
+  <p>
+    Now that you've experimented with it, it's time for a full walkthrough of the draw method (line 61).
+    This function draws both the players and the robots in the game.
+  </p>
+  <p>
+    The first four lines (line 62 through line 65) choose which image to display from the configuration
+    passed in on line 101 and line 111. Players can be dead, whereas robots can be wrecked, so we check
+    both conditions to see if we should display the image assigned to <code>dead:</code> or the image
+    assigned to <code>alive:</code>.
+  </p>
+  <p>
+    The next five lines (line 66 through line 70) set up the default configuration for the <code>padding</code>
+    and calculate the size to display the image given the <code>size</code> you pass in on line 99 and line 107.
+  </p>
+  <p>
+    Line 71 through line 75 draws the image to the screen at the right location and the right size, and line 76
+    through line 82 draws a pink translucent box corresponding to the hit area if we have <code>showHitArea</code>
+    turned on.
+  </p>
+  <p>
+    You can read more about the function <code>drawImage</code> in 
+    <a href="https://developer.mozilla.org/en-US/docs/Web/API/CanvasRenderingContext2D#drawImage()">this article</a>
+    on MDN, if you'd like. There are lots of different ways to draw using a canvas element, so feel
+    free to try them out if you feel adventurous!
+  </p>
 </section>
