graphics hack is live

--- a/hacks/graphics/tutorial.html
+++ b/hacks/graphics/tutorial.html
@@ -99,7 +99,7 @@
   </p>
   <p>
     You can read more about the function <code>drawImage</code> in 
-    <a href="https://developer.mozilla.org/en-US/docs/Web/API/CanvasRenderingContext2D#drawImage()">this article</a>
+    <a target="_blank" href="https://developer.mozilla.org/en-US/docs/Web/API/CanvasRenderingContext2D#drawImage()">this article</a>
     on MDN, if you'd like. There are lots of different ways to draw using a canvas element, so feel
     free to try them out if you feel adventurous!
   </p>
