Attribution for coquette

--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
     <li><a href="#">Change the robot AI</a> <small>Coming soon</small></li>
   </ul>
 </section>
-
-<small class="attribution">By <a href="https://twitter.com/stenington">@stenington</a></small>
+<section class="attribution">
+  <small><a href="http://coquette.maryrosecook.com/">Coquette framework</a> by Mary Rose Cook</small>
+  <small>ROBORAMPAGE by <a href="https://twitter.com/stenington">@stenington</a></small>
+</section>
 
 <script>
 function showMessage(msg) {
