--- a/test/index.html
+++ b/test/index.html
@@ -12,106 +12,7 @@
   <script src="../coquette.js"></script>
   <script src="../roborampage.js"></script>
   <script>mocha.setup('bdd')</script>
-  <script>
-    describe('Extra Maths', function() {
-      it('should have scaleVector', function () {
-        Coquette.Collider.Maths.scaleVector.should.be.a.Function;
-      });
-    });
-
-    describe('Game Controls', function () {
-      afterEach(function(done) {
-        this.g.c.ticker.stop(); // stop the current game instance
-        requestAnimationFrame(function() {
-          done(); // let queued functions clear before continuing tests
-        });
-      });
-
-      it('should run key function continuously when down', function (done) {
-        var times = 0;
-        Person.prototype.controls = {
-          'A': function() { times++; }
-        };
-        var g = this.g = new Game({width: 100, height: 100, background: "black", enemies: 1});
-        g.c.inputter._buttonListener._down(g.c.inputter.A);
-        setTimeout(function() {
-          g.c.ticker.stop();
-          times.should.be.greaterThan(1);
-          done();
-        }, 100);
-      });
-
-      it('should not run key function when up', function (done) {
-        var times = 0;
-        Person.prototype.controls = {
-          'A': function() { times++; }
-        };
-        var g = this.g = new Game({width: 100, height: 100, background: "black", enemies: 1});
-        setTimeout(function() {
-          times.should.equal(0);
-          done();
-        }, 100);
-      });
-
-      it('should run down function continuously when down', function (done) {
-        var up = 0;
-        var down = 0;
-        Person.prototype.controls = {
-          'A': {
-            down: function() { down++; },
-            up: function() { up++; }
-          }
-        };
-        var g = this.g = new Game({width: 100, height: 100, background: "black", enemies: 1});
-        g.c.inputter._buttonListener._down(g.c.inputter.A);
-        setTimeout(function() {
-          g.c.ticker.stop();
-          down.should.be.greaterThan(1);
-          up.should.equal(0);
-          done();
-        }, 100);
-      });
-
-      it('should run up function continuously when up', function (done) {
-        var up = 0;
-        var down = 0;
-        Person.prototype.controls = {
-          'A': {
-            down: function() { down++; },
-            up: function() { up++; }
-          }
-        };
-        var g = this.g = new Game({width: 100, height: 100, background: "black", enemies: 1});
-        setTimeout(function() {
-          up.should.be.greaterThan(1);
-          down.should.equal(0);
-          done();
-        }, 100);
-      });
-
-      it('should run pressed function once when down', function (done) {
-        var times = 0;
-        Person.prototype.controls = {
-          'A': {
-            pressed: function() { times++; }
-          }
-        };
-        var ticks = 0;
-        var update = Person.prototype.update;
-        Person.prototype.update = function () {
-          ticks++;
-          update.apply(this);
-        };
-        var g = this.g = new Game({width: 100, height: 100, background: "black", enemies: 1});
-        g.c.inputter._buttonListener._down(g.c.inputter.A);
-        setTimeout(function() {
-          times.should.equal(1);
-          ticks.should.be.greaterThan(1);
-          done();
-        }, 100);
-      });
-    });
-  </script>
+  <script src="tests.js"></script>
   <script>
     mocha.checkLeaks();
     mocha.globals(['jQuery']);
