--- a/hacks/colors/index.html
+++ b/hacks/colors/index.html
@@ -36,7 +36,10 @@
   </ul>
 </section>
 
-<small class="attribution">By <a href="https://twitter.com/stenington">@stenington</a></small>
+<section class="attribution">
+  <small><a href="http://coquette.maryrosecook.com/">Coquette framework</a> by Mary Rose Cook</small>
+  <small>ROBORAMPAGE by <a href="https://twitter.com/stenington">@stenington</a></small>
+</section>
 
 <script>
 function showMessage(msg) {
@@ -55,14 +58,20 @@ window.addEventListener('load', function() {
       center: { x: 250, y: 250 },
       size: { x: 9, y: 9 },
       speed: { walk: 2.4, run: 3.6 },
-      colors: { alive: "#2aa198", dead: "#2aa198" }
+      colors: {
+        alive: "#2aa198",
+        dead: "#2aa198"
+      }
     },
     robot: {
       size: { x: 9, y: 9 },
       speed: { walk: 2.6 },
       attackStrategy: 'compass',
       waitStrategy: 'roam',
-      colors: { alive: "#d33682", dead:  "#dc322f" },
+      colors: {
+        alive: "#d33682",
+        dead:  "#dc322f"
+      },
     },
     win: function () {
       showMessage("You win!");
