Update graphics hack source and line numbers

--- a/hacks/graphics/index.html
+++ b/hacks/graphics/index.html
@@ -53,7 +53,10 @@
   <img id="robot-dead" src="bot-r.gif">
 </section>
 
-<small class="attribution">By <a href="https://twitter.com/stenington">@stenington</a></small>
+<section class="attribution">
+  <small><a href="http://coquette.maryrosecook.com/">Coquette framework</a> by Mary Rose Cook</small>
+  <small>ROBORAMPAGE by <a href="https://twitter.com/stenington">@stenington</a></small>
+</section>
 
 <script>
 var showHitArea = false;
