Wrapping everything up in the Game constructor, which makes testing a little easier since changes to the prototype chain are contained to each Game object.
Tutorials not yet updated.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ function showMessage(msg) {
 }
 
 window.addEventListener('load', function() {
-  new Game({
+  new Game().start({
     width: 500,
     height: 500,
     background: "#002b36",
