--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <script src="coquette.js"></script>
+<script src="/socket.io/socket.io.js"></script>
 <script src="roborampage.js"></script>
 <link href='https://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
 <link href="style.css" rel="stylesheet" type="text/css">
@@ -49,16 +50,16 @@ function showMessage(msg) {
 }
 
 window.addEventListener('load', function() {
-  new Game().start({
+  var g = new Game();
+  g.start({
     width: 500,
     height: 500,
     background: "#002b36",
     enemies: 10,
     player: {
-      center: { x: 250, y: 250 },
       size: { x: 9, y: 9 },
       speed: { walk: 2.4, run: 3.6 },
-      colors: { alive: "#2aa198", dead: "#2aa198" }
+      colors: { alive: "#2aa198", dead: "#555" }
     },
     robot: {
       size: { x: 9, y: 9 },
