--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
+<title>Roborampage</title>
 <script src="coquette.js"></script>
 <script src="roborampage.js"></script>
 <link href='https://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
@@ -7,6 +8,7 @@
 
 <a href="https://github.com/stenington/roborampage"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://camo.githubusercontent.com/567c3a48d796e2fc06ea80409cc9dd82bf714434/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png"></a>
 <h1>ROBORAMPAGE</h1>
+<a class="help" href="what.html"><small>What is this?</small></a>
 <div class="container">
   <canvas id="canvas" tabindex="1"></canvas>
   <h1 id="message"></h1>
@@ -26,7 +28,7 @@
     <dd>to teleport</dd>
   </dl>
 </section>
-<section class="hack">
+<section class="hack" id="hack">
   <h2>Hack It</h2>
   <p>Hack the game <a href="https://thimble.webmaker.org/project/59304/remix">in Thimble</a> or follow one of these tutorials:</p>
   <ul>
