Add compilation from .tmpl with nunjucks

--- a/hacks/colors/skeleton.html
+++ b/hacks/colors/skeleton.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<script src="../../coquette.js"></script>
-<script src="../../roborampage.js"></script>
 <link href='https://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
 <link href="../../style.css" rel="stylesheet" type="text/css">
+<title>Roborampage</title>
+<script src="../../coquette.js"></script>
+<script src="../../roborampage.js"></script>
+
+<a href="https://github.com/stenington/roborampage"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://camo.githubusercontent.com/567c3a48d796e2fc06ea80409cc9dd82bf714434/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png"></a>
 
 <h1>ROBORAMPAGE</h1>
+<a class="help" href="what.html"><small>What is this?</small></a>
 <div class="container">
   <canvas id="canvas" tabindex="1"></canvas>
   <h1 id="message"></h1>
 </div>
 <p>The robots are after you! Get them to crash before they get you.</p>
 <section class="play">
-  <h2>Play</h2>
+  <h2>Play It</h2>
   <dl>
     <dt>▲</dt>
     <dt>◀</dt>
@@ -25,8 +29,8 @@
     <dd>to teleport</dd>
   </dl>
 </section>
-<section class="hack">
-  <h2>Hack</h2>
+<section class="hack" id="hack">
+  <h2>Hack It</h2>
   <p>Hack the game <a href="https://thimble.webmaker.org/project/59304/remix">in Thimble</a> or follow one of these tutorials:</p>
   <ul>
     <li><a href="https://thimble.webmaker.org/en-US/project/59570/remix">Choose your colors</a></li>
@@ -35,11 +39,11 @@
     <li><a href="#">Change the robot AI</a> <small>Coming soon</small></li>
   </ul>
 </section>
-
 <section class="attribution">
   <small><a href="http://coquette.maryrosecook.com/">Coquette framework</a> by Mary Rose Cook</small>
   <small>ROBORAMPAGE by <a href="https://twitter.com/stenington">@stenington</a></small>
 </section>
+
 
 <script>
 function showMessage(msg) {
@@ -82,3 +86,5 @@ window.addEventListener('load', function() {
   });
 });
 </script>
+
+
