--- a/test/index.html
+++ b/test/index.html
@@ -11,8 +11,8 @@
   <script src="vendor/jquery.js"></script>
   <script src="vendor/should.js"></script>
   <script src="vendor/mocha.js"></script>
-  <script src="../coquette.js"></script>
-  <script src="../roborampage.js"></script>
+  <script src="../src/vendor/coquette.js"></script>
+  <script src="../src/roborampage.js"></script>
   <script>mocha.setup('bdd')</script>
   <script src="tests.js"></script>
   <script>
