--- a/what.html
+++ b/what.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <link href='https://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
-<link href="style.css" rel="stylesheet" type="text/css">
+<link href="src/style.css" rel="stylesheet" type="text/css">
 
 <title>What is Roborampage?</title>
 
