--- a/hacks/graphics/skeleton.html
+++ b/hacks/graphics/skeleton.html
@@ -42,6 +42,19 @@
   </ul>
 </section>
 
+<section class="assets">
+  <h2>Assets</h2>
+  <p>
+    The graphics for this example were found or adapted from artwork at <a href="http://opengameart.org/">OpenGameArt.Org</a>,
+    specifically <a href="http://opengameart.org/content/block-ninja-2d-sprites">this</a> and
+    <a href="http://opengameart.org/content/little-angry-robot-drone">this</a> resource.
+  </p>
+  <img id="player-alive" src="ninja.png">
+  <img id="player-dead" src="dead.png">
+  <img id="robot-alive" src="bot-g.gif">
+  <img id="robot-dead" src="bot-r.gif">
+</section>
+
 <section class="attribution">
   <small><a href="http://coquette.maryrosecook.com/">Coquette framework</a> by Mary Rose Cook</small>
   <small>ROBORAMPAGE by <a href="https://twitter.com/stenington">@stenington</a></small>
@@ -49,6 +62,32 @@
 
 
 <script>
+var showHitArea = false;
+
+Base.prototype.draw = function(ctx) {
+  var image = this.images['alive'];
+  if (this.dead || this.wreck) {
+    image = this.images['dead'];
+  }
+  this.padding = this.padding || {x:0, y:0};
+  var imageSize = {
+    x: this.size.x + this.padding.x,
+    y: this.size.y + this.padding.y
+  };
+  ctx.drawImage(image, 
+    this.center.x - imageSize.x / 2,
+    this.center.y - imageSize.y / 2,
+    imageSize.x,
+    imageSize.y);
+  if (showHitArea) {
+    ctx.fillStyle = "rgba(255, 0, 255, 0.5)";
+    ctx.fillRect(this.center.x - this.size.x / 2,
+      this.center.y - this.size.y / 2,
+      this.size.x,
+      this.size.y);
+  }
+};
+
 function showMessage(msg) {
   var el = document.getElementById('message');
   el.style.display = "initial";
@@ -59,26 +98,26 @@ window.addEventListener('load', function() {
   new Game({
     width: 500,
     height: 500,
-    background: "#002b36",
-    enemies: 10,
+    background: "steelblue",
+    enemies: 5,
     player: {
       center: { x: 250, y: 250 },
-      size: { x: 9, y: 9 },
+      size: { x: 32, y: 32 },
       speed: { walk: 2.4, run: 3.6 },
-      colors: {
-        alive: "#2aa198",
-        dead: "#2aa198"
+      images: {
+        alive: document.getElementById('player-alive'),
+        dead: document.getElementById('player-dead')
       }
     },
     robot: {
-      size: { x: 9, y: 9 },
+      size: { x: 32, y: 30 },
       speed: { walk: 2.6 },
       attackStrategy: 'compass',
       waitStrategy: 'roam',
-      colors: {
-        alive: "#d33682",
-        dead:  "#dc322f"
-      },
+      images: {
+        alive: document.getElementById('robot-alive'),
+        dead: document.getElementById('robot-dead')
+      }
     },
     win: function () {
       showMessage("You win!");
