--- a/hacks/graphics/skeleton.html
+++ b/hacks/graphics/skeleton.html
@@ -49,10 +49,10 @@
     specifically <a href="http://opengameart.org/content/block-ninja-2d-sprites">this</a> and
     <a href="http://opengameart.org/content/little-angry-robot-drone">this</a> resource.
   </p>
-  <img id="player-alive" src="ninja.png">
-  <img id="player-dead" src="dead.png">
-  <img id="robot-alive" src="bot-g.gif">
-  <img id="robot-dead" src="bot-r.gif">
+  <img id="player-alive" src="../../hacks/graphics/ninja.png">
+  <img id="player-dead" src="../../hacks/graphics/dead.png">
+  <img id="robot-alive" src="../../hacks/graphics/bot-g.gif">
+  <img id="robot-dead" src="../../hacks/graphics/bot-r.gif">
 </section>
 
 <section class="attribution">
